# Programming-in-C

./: .gitignore  CMakeLists.txt  README.md  Tasks.doc  push.md  ~$Tasks.doc
my-study/: example1.c  example2.c  example3.c  stepik1.c  stepik10.c  stepik2.c  stepik3.c  stepik4.c  stepik5.c  stepik6.c  stepik7.c  stepik8.c  stepik9.c  task1.c  task1.md  task10.c  task10.md  task11.c  task11.md  task12.c  task12.md  task2.c  task2.md  task3.c  task3.md  task4.c  task4.md  task5.c  task5.md  task6.c  task6.md  task7.c  task7.md  task8.c  task8.md  task9.c  task9.md
reports/: 2026-02-02.md  2026-02-03.md  2026-02-08.md  2026-04-16.md  2026-04-19.md  2026-04-22.md  2026-04-23.md  2026-04-24.md  2026-04-26.md  2026-05-02.md  2026-05-03.md  2026-05-27.md  2026-05-31.md  README.md
study-log/: 2026-02-02.md  2026-02-03.md  2026-04-16(2).md  2026-04-16.md  2026-04-23(2).md  2026-04-23(3).md  2026-04-23(4).md  2026-04-23(5).md  2026-04-23.md  2026-04-24.md  2026-04-26(1).md  2026-04-26(2).md  2026-04-26.md  2026-05-02(2).md  2026-05-02(3).md  2026-05-02.md  2026-05-03.md
Лабораторные работы/: lab1.c  lab1.md  lab10.c  lab10.md  lab12.c  lab12.md  lab13.c  lab13.md  lab14.c  lab14.md  lab15.c  lab15.md  lab16.c  lab16.md  lab2.c  lab2.md  lab3.c  lab3.md  lab7.c  lab7.md  lab9.c  lab9.md
Лекции/: Лекция 1.ppt  Лекция 10.ppt  Лекция 11.ppt  Лекция 12.ppt  Лекция 13.ppt  Лекция 14.ppt  Лекция 15.ppt  Лекция 2.ppt  Лекция 3.ppt  Лекция 4.ppt  Лекция 5.ppt  Лекция 6.ppt  Лекция 7.ppt  Лекция 8.ppt  Лекция 9.ppt  Лекция1.doc  Лекция10.doc  Лекция11.doc  Лекция12.doc  Лекция13.doc  (+10 more)
(+58 files in other folders)
